fix: use Vercel Edge Function for Steam API proxy instead of rewrites
- Created Edge Function at /api/steam-api/[...path].ts
- Updated steamApi.ts to use /api/steam-api in production
- Simplified vercel.json (removed rewrites)
- Added @vercel/node as dev dependency

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,3 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "rewrites": [
-    {
-      "source": "/steam-api/:path*",
-      "destination": "https://api.steampowered.com/:path*"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/steam-api/:path*",
-      "headers": [
-        {
-          "key": "CDN-Cache-Control",
-          "value": "max-age=300"
-        }
-      ]
-    }
-  ]
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
